HighContrast: make the theme a GResource
And split colors from the style definitions, so that we can make a
HighContrastInverse easily now.

--- a/themes/HighContrast/gtk-3.0/gtk.css
+++ b/themes/HighContrast/gtk-3.0/gtk.css
@@ -1,305 +1,7 @@
-* {
-    -GtkRange-stepper-size: 20;
+@define-color theme_base_color #fff;
+@define-color theme_fg_color #000;
+@define-color theme_active_color #b8b891;
+@define-color theme_insensitive_color #999;
+@define-color theme_insensitive_bg #ccf;
 
-    -GtkTreeView-expander-size: 16;
-
-    -GtkWidget-cursor-color: #cc0000;
-    -GtkWidget-cursor-aspect-ratio: 0.1;
-    -GtkWidget-focus-line-width: 30;
-    -GtkWidget-focus-padding: 1;
-    -GtkWidget-focus-line-width: 2;
-    -GtkWidget-focus-line-pattern: "\002\001";
-    -GtkWidget-link-color: #000060;
-    -GtkWidget-visited-link-color: #600000;
-
-    -GtkMenu-horizontal-padding: 0;
-    -GtkMenu-vertical-padding: 0;
-
-    -GtkScrolledWindow-scrollbar-spacing: 0;
-    -GtkScrolledWindow-scrollbars-within-bevel: 1;
-
-    /* Pidgin */
-    -GtkIMHtml-hyperlink-color: #000060;
-    -GtkIMHtml-hyperlink-visited-color: #600000;
-    -GtkIMHtml-hyperlink-prelight-color: #404080;
-
-    /* Evolution */
-    -GtkHTML-link-color: #000060;
-    -GtkHTML-vlink-color: #600000;
-    -GtkHTML-cite-color: #003000;
-
-    -GtkComboBox-arrow-scaling: 0.9;
-}
-
-GtkWindow {
-    background-color: #fff;
-    color: #000;
-}
-
-*:insensitive {
-    color: #999;
-    background-color: #ccf;
-    border-color: #999;
-}
-
-*:selected {
-    background-color: #b8b891;
-    color: #000;
-}
-
-*:selected:focused {
-    background-color: #000;
-    color: #fff;
-}
-
-GtkImage:insensitive {
-    background-color: transparent;
-}
-
-.tooltip {
-    background-color: #000;
-    color: #ccf;
-}
-
-.grip {
-    background-color: #999;
-}
-
-.button,
-.trough,
-.entry {
-    border-width: 2px;
-    border-style: solid;
-    border-color: #000;
-}
-
-.button:hover {
-    background-color: #000;
-    border-color: #ccf;
-    color: #ccf;
-}
-
-GtkComboBox *:hover {
-    color: #ccf;
-}
-
-GtkComboBox .separator {
-    color: transparent;
-}
-
-.button:insensitive,
-.trough:insensitive,
-.entry:insensitive {
-    border-color: #999;
-}
-
-.trough {
-    background-color: #b8b891;
-    color: #000;
-}
-
-.trough:active {
-    color: #fff;
-}
-
-.trough:insensitive {
-    background-color: #ccf;
-    color: #999;
-}
-
-.button:active,
-.trough:active {
-    background-color: #b8b891;
-}
-
-.button:hover:active {
-    background-color: #000;
-}
-
-.button:insensitive:active,
-.trough:insensitive:active {
-    background-color: #ccf;
-}
-
-.entry {
-    padding: 4px;
-}
-
-.button {
-    padding: 1px 4px;
-}
-
-GtkComboBox .button {
-    padding: 0 4px;
-}
-
-.combobox-entry .entry:first-child {
-    border-right-width: 0px;
-}
-
-.combobox-entry .entry:last-child {
-    border-left-width: 0px;
-}
-
-.spinbutton .button {
-    padding: 2px 6px;
-    border-width: 0px 2px;
-    color: #000;
-}
-
-.spinbutton .button:hover {
-    color: #ccf;
-    border-color: #000;
-}
-
-.spinbutton .button:insensitive {
-    color: #999;
-}
-
-.spinbutton .button:first-child,
-.spinbutton .button:last-child {
-    border-width: 0px;
-}
-
-.menubar .menuitem {
-    padding: 3px 5px;
-}
-
-.menubar .menuitem:hover {
-    background-color: #000;
-    color: #ccf;
-}
-
-.menu .menuitem {
-    padding: 4px;
-}
-
-.menu .menuitem:hover {
-    background-color: #000;
-    color: #ccf;
-}
-
-.menu {
-    border-style: solid;
-    border-color: red;
-    border-width: 0px;
-}
-
-.menuitem.separator {
-    -GtkMenuItem-horizontal-padding: 0;
-}
-
-.toolbar {
-    padding: 4px;
-    border-width: 2px 0;
-    border-style: solid;
-}
-
-.toolbar .button *:insensitive,
-.toolbar .button:insensitive {
-    background-color: #fff;
-}
-
-.toolbar .button *:insensitive:active,
-.toolbar .button:insensitive:active {
-    background-color: #ccf;
-}
-
-.inline-toolbar {
-    border-width: 0 2px 2px;
-}
-
-.primary-toolbar.toolbar,
-.primary-toolbar .toolbar,
-.menubar.toolbar,
-.inline-toolbar {
-    -GtkToolbar-button-relief: normal;
-}
-
-.primary-toolbar .button {
-    border-color: transparent;
-}
-
-.primary-toolbar .button.raised,
-.primary-toolbar .raised .button {
-    border-color: #000;
-}
-
-.primary-toolbar .button:active {
-    border-color: #000;
-}
-
-.primary-toolbar .button:hover:active {
-    border-color: #ccf;
-}
-
-.primary-toolbar .button:active:insensitive {
-    border-color: #999;
-}
-
-.slider {
-    background-color: #fff;
-    border-width: 2px;
-    border-style: solid;
-    border-color: #000;
-
-    color: transparent;
-}
-
-.slider:hover {
-    background-color: #000;
-    border-color: #000;
-}
-
-.slider:hover:active {
-    border-color: #ccf;
-}
-
-GtkSwitch.slider {
-    padding: 2px;
-    border-width: 1px;
-    border-color: #ccf;
-}
-
-.notebook {
-    border-width: 2px;
-    border-color: #000;
-    border-style: solid;
-}
-
-tab {
-    background-color: #b8b891;
-    padding: 3px;
-}
-
-tab:active,
-row:hover {
-    background-color: #fff;
-    color: #000;
-}
-
-GtkScrolledWindow.frame {
-    border-width: 2px;
-    border-style: solid;
-}
-
-column-header .button {
-    border-top-width: 0;
-    border-right-width: 0;
-}
-
-column-header .button:hover {
-    background-color: #000;
-    color: #fff;
-    border-color: #000;
-}
-
-column-header:first-child .button {
-    border-left-width: 0;
-}
-
-.check,
-.radio {
-    border-width: 1px;
-    border-style: solid;
-}
+@import url("resource:///org/gnome/HighContrast/a11y.css");
