--- a/themes/Adwaita/gtk-3.0/gnome-applications.css
+++ b/themes/Adwaita/gtk-3.0/gnome-applications.css
@@ -625,9 +625,12 @@ ContactsWindow .primary-toolbar.toolbar {
  border-width: 0 0 1px 0;
 }
 
-ContactsWindow .sidebar,
-ContactsWindow .sidebar.view {
+ContactsWindow .sidebar .view {
  background-color: #ebebeb;
+}
+ContactsWindow .sidebar .view:selected,
+ContactsWindow .sidebar .view:selected:focus {
+ background-color: @theme_selected_bg_color;
 }
 
 .contacts-button:active {
