No padding for contacts "square" buttons
Image frames were looking ass with different horizontal and vertical
padding.

--- a/themes/Adwaita/gtk-3.0/gnome-applications.css
+++ b/themes/Adwaita/gtk-3.0/gnome-applications.css
@@ -669,6 +669,10 @@ ContactsWindow .sidebar .view:selected:focus {
  border-width: 1px;
 }
 
+.button.contacts-square {
+ padding: 0px;
+}
+
 .contacts-combo .button {
  border-image: none;
  border-width: 1px;
