--- a/themes/a11y-base.css
+++ b/themes/a11y-base.css
@@ -16,6 +16,7 @@
     -GtkScrolledWindow-scrollbars-within-bevel: 1;
 
     -GtkComboBox-arrow-scaling: 0.9;
+    -GtkButton-default-border: 0;
 }
 
 GtkWindow {
