--- a/themes/Adwaita/gtk-3.0/gnome-applications.css
+++ b/themes/Adwaita/gtk-3.0/gnome-applications.css
@@ -695,3 +695,11 @@ ContactsWindow .sidebar .view:selected:focus {
  color-stop (0.15, rgba (0, 0, 0, 0.04)),
  to (rgba (0, 0, 0, 0.0)));
 }
+
+/* Gucharmap */
+GucharmapChartable:active,
+GucharmapChartable:focus,
+GucharmapChartable:selected {
+ background-color: @theme_selected_bg_color;
+ color: @theme_selected_fg_color;
+}
