--- a/themes/Adwaita/gtk-3.0/gtk-main-dark.css
+++ b/themes/Adwaita/gtk-3.0/gtk-main-dark.css
@@ -169,8 +169,11 @@
 @define-color scale_progress_border #1864b2;
 @define-color scale_progress_border_b #3e90e5;
 
-@define-color wm_highlight shade (@theme_bg_color, 1.4);
-@define-color wm_title_highlight #111111;
+@define-color wm_title @theme_fg_color;
+@define-color wm_unfocused_title @theme_unfocused_fg_color;
+@define-color wm_highlight shade(@theme_bg_color, 1.4);
+@define-color wm_title_highlight_dark @button_text_shadow;
+@define-color wm_title_highlight alpha(#000000, 0.0);
 
 @define-color wm_bg_a shade (@theme_bg_color, 1.3);
 @define-color wm_bg_b @theme_bg_color;
