--- a/themes/Adwaita/gtk-3.0/gtk-main.css
+++ b/themes/Adwaita/gtk-3.0/gtk-main.css
@@ -29,7 +29,6 @@
 @define-color theme_unfocused_selected_bg_color shade(@theme_unfocused_bg_color, 0.95);
 @define-color theme_unfocused_selected_fg_color @theme_fg_color;
 @define-color unfocused_button_background @theme_unfocused_bg_color;
-@define-color unfocused_borders @borders;
 @define-color unfocused_insensitive_borders mix(@theme_unfocused_bg_color, @unfocused_borders, 0.5);
 @define-color unfocused_insensitive_fg_color mix(@theme_unfocused_bg_color, @theme_unfocused_fg_color, 0.5);
 @define-color unfocused_insensitive_bg_color mix(@theme_unfocused_bg_color, @theme_unfocused_base_color, 0.5);
@@ -191,7 +190,10 @@
 @define-color inset_light_color alpha(white, 0.45);
 @define-color inset_dark_color alpha(black, 0.07);
 
+@define-color wm_title @theme_fg_color;
+@define-color wm_unfocused_title @theme_unfocused_fg_color;
 @define-color wm_highlight #ffffff;
+@define-color wm_title_highlight_dark alpha(#ffffff, 0.0);
 @define-color wm_title_highlight #ffffff;
 
 @define-color wm_bg_a shade (@bg_color, 1.1);
