--- a/themes/Adwaita/gtk-3.0/gtk-main.css
+++ b/themes/Adwaita/gtk-3.0/gtk-main.css
@@ -29,6 +29,7 @@
 @define-color theme_unfocused_selected_bg_color shade(@theme_unfocused_bg_color, 0.95);
 @define-color theme_unfocused_selected_fg_color @theme_fg_color;
 @define-color unfocused_button_background @theme_unfocused_bg_color;
+@define-color unfocused_borders @borders;
 @define-color unfocused_insensitive_borders mix(@theme_unfocused_bg_color, @unfocused_borders, 0.5);
 @define-color unfocused_insensitive_fg_color mix(@theme_unfocused_bg_color, @theme_unfocused_fg_color, 0.5);
 @define-color unfocused_insensitive_bg_color mix(@theme_unfocused_bg_color, @theme_unfocused_base_color, 0.5);
