Widgets: colorchooser: selected colors badge styling.

--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -368,17 +368,19 @@ GtkColorChooserWidget > GtkBox > GtkBox > GtkColorSwatch:first-child {
 
 .color-active-badge,
 .color-active-badge:selected {
-    background-color: @theme_bg_color;
-    color: @theme_text_color;
+    border-style: solid;
     border-width: 2px;
+    background-color: transparent;
 }
 
 .color-active-badge.color-light {
-    border-color: alpha(black, 0.4);
+    border-color: #444444;
+    color: #444444;
 }
 
 .color-active-badge.color-dark {
-    border-color: alpha(white, 0.4);
+    border-color: #cccccc;
+    color: #cccccc;
 }
 
 GtkColorEditor GtkColorSwatch {
