Widgets: unneeded custom styling for nautilus search button;          fixed backdrop primary toolbar raised buttons hover state.

--- a/themes/Adwaita/gtk-3.0/gtk-widgets-backgrounds.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets-backgrounds.css
@@ -101,7 +101,8 @@
 .button:backdrop,
 .toolbar .button.raised:backdrop,
 .toolbar .raised .button:backdrop,
-.toolbar .button:hover:backdrop {
+.toolbar .button:backdrop:hover,
+.primary-toolbar .raised .button:backdrop:hover {
     background-image: none;
     background-color: @unfocused_button_background;
 }
