Don't have padding inside GtkViewport
This fixes an issue in Gnome Contacts, and is also similar to the
no padding we have in scrolled window.

--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -568,6 +568,10 @@ GtkScale.trough:insensitive:backdrop {
     background-color: @theme_base_color;
 }
 
+GtkViewport.frame {
+    padding: 0;
+}
+
 /* only render frames in a GtkScrolledWindow */
 GtkScrolledWindow.frame {
     border-style: solid;
