--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -331,6 +331,11 @@ GtkColorSwatch:selected {
     background-clip: border-box;
 }
 
+GtkColorSwatch:backdrop,
+GtkColorSwatch:backdrop:selected {
+    box-shadow: none;
+}
+
 GtkColorSwatch.left,
 GtkColorSwatch:first-child {
     border-top-left-radius: 6px;
@@ -358,11 +363,33 @@ GtkColorSwatch.bottom {
 }
 
 GtkColorChooserWidget #add-color-button {
-    border-color: @borders;
+    background-clip: padding-box;
+    border-color: mix(@borders, @theme_bg_color, 0.5);
     background-color: mix(@borders, @theme_bg_color, 0.5);
-    color: #444444;
+    color: @theme_bg_color;
     box-shadow: none;
 }
+
+GtkColorChooserWidget #add-color-button:hover {
+    border-color: @borders;
+    background-color: @borders;
+    color: @theme_bg_color;
+}
+
+
+GtkColorChooserWidget #add-color-button:active,
+GtkColorChooserWidget #add-color-button:active:hover {
+    border-color: @theme_selected_bg_color;
+    background-color: @theme_selected_bg_color;
+    color: @theme_bg_color;
+}
+
+GtkColorChooserWidget #add-color-button:backdrop {
+    border-color: mix(@unfocused_borders, @theme_unfocused_bg_color, 0.5);
+    background-color: mix(@unfocused_borders, @theme_unfocused_bg_color, 0.5);
+    color: @theme_unfocused_bg_color;
+}
+
 
 .color-active-badge,
 .color-active-badge:selected {
