--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -121,6 +121,31 @@ GtkWindow:backdrop {
 /*****************
  * Miscellaneous *
  *****************/
+.floating-bar {
+    background-color: @info_bg_color;
+    border-color: darker(@info_bg_color);
+
+    border-radius: 0;
+    border-width: 1px;
+    border-style: solid;
+}
+
+.floating-bar:backdrop {
+    background-color: @theme_unfocused_base_color;
+    border-color: shade(@theme_unfocused_base_color, 0.9);
+}
+
+.floating-bar .button {
+    background-color: alpha (@theme_base_color, 0.0);
+    background-image: none;
+
+    border-style: none;
+    border-image: none;
+
+    -GtkButton-image-spacing: 0;
+    -GtkButton-inner-border: 0;
+}
+
 .view.rubberband,
 .rubberband {
     background-color: alpha (@theme_selected_bg_color, 0.35);
