Widgets: set correct borders on primary toolbars combobox-entry in          backdrop state.

--- a/themes/Adwaita/gtk-3.0/gtk-widgets-borders-dark.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets-borders-dark.css
@@ -83,6 +83,7 @@ GtkSwitch.trough:active {
 .primary-toolbar .entry:focus,
 .primary-toolbar .button:active:focus,
 .primary-toolbar GtkComboBox.combobox-entry .entry:focus,
+.primary-toolbar GtkComboBox.combobox-entry .button:focus,
 .primary-toolbar .button.raised:focus:active,
 .primary-toolbar .raised .button:focus:active,
 .primary-toolbar .button.raised.default:active,
@@ -186,6 +187,8 @@ GtkSwitch.trough:backdrop,
 .primary-toolbar .button:active:backdrop,
 .primary-toolbar .button.raised:backdrop,
 .primary-toolbar .raised .button:backdrop,
+.primary-toolbar GtkComboBox.combobox-entry .entry:backdrop,
+.primary-toolbar GtkComboBox.combobox-entry .button:backdrop,
 .primary-toolbar .entry:backdrop,
 .inline-toolbar.toolbar .button:backdrop,
 .inline-toolbar.toolbar .button:backdrop:insensitive,
