--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -356,9 +356,40 @@ GtkColorSwatch:selected {
     background-clip: border-box;
 }
 
+GtkColorSwatch:hover,
+GtkColorSwatch:selected:hover {
+    border-color: alpha(black, 0.45);
+}
+
+GtkColorSwatch.color-dark:hover {
+    background-image: linear-gradient(to bottom,
+                                      alpha(white, 0) 40%,
+                                      alpha(white, 0.3)
+                                      );
+
+}
+
+GtkColorSwatch.color-light:hover {
+    background-image: linear-gradient(to top,
+                                      alpha(black, 0) 40%,
+                                      alpha(black, 0.1)
+                                      );
+
+}
+
+GtkColorSwatch.color-light:selected:hover,
+GtkColorSwatch.color-dark:selected:hover {
+    background-image: none;
+}
+
 GtkColorSwatch:backdrop,
 GtkColorSwatch:backdrop:selected {
     box-shadow: none;
+}
+
+GtkColorSwatch:backdrop:hover {
+    border-color: alpha(black, 0.3);
+    background-image: none;
 }
 
 GtkColorSwatch.left,
@@ -389,29 +420,21 @@ GtkColorSwatch.bottom {
 
 GtkColorChooserWidget #add-color-button {
     background-clip: padding-box;
-    border-color: mix(@borders, @theme_bg_color, 0.5);
-    background-color: mix(@borders, @theme_bg_color, 0.5);
-    color: @theme_bg_color;
+    border-color: mix(@borders, @theme_bg_color, 0.3);
+    background-color: mix(@borders, @theme_bg_color, 0.3);
+    color: @theme_base_color;
     box-shadow: none;
 }
 
 GtkColorChooserWidget #add-color-button:hover {
     border-color: @borders;
     background-color: @borders;
-    color: @theme_bg_color;
-}
-
-
-GtkColorChooserWidget #add-color-button:active,
-GtkColorChooserWidget #add-color-button:active:hover {
-    border-color: @theme_selected_bg_color;
-    background-color: @theme_selected_bg_color;
-    color: @theme_bg_color;
+    color: @theme_base_color;
 }
 
 GtkColorChooserWidget #add-color-button:backdrop {
-    border-color: mix(@unfocused_borders, @theme_unfocused_bg_color, 0.5);
-    background-color: mix(@unfocused_borders, @theme_unfocused_bg_color, 0.5);
+    border-color: mix(@unfocused_borders, @theme_unfocused_bg_color, 0.3);
+    background-color: mix(@unfocused_borders, @theme_unfocused_bg_color, 0.3);
     color: @theme_unfocused_bg_color;
 }
 
@@ -423,12 +446,14 @@ GtkColorChooserWidget #add-color-button:backdrop {
     background-color: transparent;
 }
 
-.color-active-badge.color-light {
+.color-active-badge.color-light,
+.color-active-badge.color-light:hover {
     border-color: #444444;
     color: #444444;
 }
 
-.color-active-badge.color-dark {
+.color-active-badge.color-dark,
+.color-active-badge.color-dark:hover {
     border-color: #cccccc;
     color: #cccccc;
 }
@@ -437,6 +462,11 @@ GtkColorEditor GtkColorSwatch {
     border-radius: 6px;
 }
 
+GtkColorEditor GtkColorSwatch.color-dark:hover,
+GtkColorEditor GtkColorSwatch.color-light:hover {
+    background-image: none;
+    border-color: alpha(black, 0.3);
+}
 
 
 /****************
