view: ensure selected treeview rows always get a selected bg
This fixes e.g. rows not being correctly selected in gnome-documents.

--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -2017,7 +2017,8 @@ GtkIconView.view.cell:selected:focus {
     border-radius: 0;
 }
 
-.view:selected {
+.view:selected,
+GtkTreeView.view:selected {
     background-color: @theme_selected_bg_color;
     color: @theme_selected_fg_color;
 }
