a11y-base: add color/background-color for gnome-terminal
https://bugzilla.gnome.org/show_bug.cgi?id=670472

--- a/themes/a11y-base.css
+++ b/themes/a11y-base.css
@@ -358,3 +358,8 @@ GtkColorSwatch {
     border-style: solid;
     border-color: @theme_fg_color;
 }
+
+TerminalScreen {
+    background-color: @theme_base_color;
+    color: @theme_fg_color;
+}
